# celerity-runtime

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  build_matrix.json  celerity_ci.yml
ci/: capture-coverage.sh  run-unit-tests.sh
ci/perf/: gpuc2_bench.csv  gpuc2_bench.md
cmake/: celerity-config.cmake.in
debug/gdb/celerity/gdb/: prettyprinters.py
docs/: installation.md  platform-support.md
examples/: CMakeLists.txt
examples/convolution/: CMakeLists.txt
examples/distr_io/: CMakeLists.txt  distr_io.cc
examples/gassimulation/: CMakeLists.txt  README.md  gassimulation.cc  plot.rb
examples/gassimulation/include/: array.h  vec3.h
examples/hello_world/: CMakeLists.txt  hello_world.cc
examples/matmul/: CMakeLists.txt  matmul.cc
examples/reduction/: CMakeLists.txt  reduction.cc
examples/syncing/: CMakeLists.txt  syncing.cc
examples/wave_sim/: CMakeLists.txt  wave_sim.cc
include/: .buffer_storage.h.swp  accessor.h  allocation_manager.h  async_event.h  bounding_box_set.h  buffer.h  buffer_manager.h  buffer_storage.h  buffer_transfer_manager.h  capture.h  celerity.h  closure_hydrator.h  command.h  command_graph.h  command_graph_generator.h  communicator.h  config.h  cuda_instruction_queue.h  dense_map.h  device_queue.h  device_selection.h  distr_queue.h  distributed_graph_generator.h  double_buffered_queue.h  dry_run_executor.h  executor.h  fence.h  fmt_internals.h  frame.h  graph_generator.h  graph_serializer.h  grid.h  handler.h  hint.h  host_allocator.h  host_instruction_queue.h  host_object.h  host_queue.h  instruction_backend.h  instruction_executor.h  (+40 more)
include/backend/: async_event.h  backend.h  cuda_backend.h  generic_backend.h  queue.h  sycl_backend.h
src/: .worker_job.cc.swp  buffer_manager.cc  buffer_storage.cc  buffer_transfer_manager.cc  command_graph_generator.cc  config.cc  cuda_instruction_queue.cc  device_queue.cc  distributed_graph_generator.cc  dry_run_executor.cc  executor.cc  fmt_internals.cc  graph_generator.cc  graph_serializer.cc  grid.cc  host_instruction_queue.cc  instruction_executor.cc  instruction_graph_generator.cc  instruction_queue.cc  instruction_scheduler.cc  live_executor.cc  local_devices.cc  mpi_communicator.cc  mpi_instruction_queue.cc  out_of_order_engine.cc  print_graph.cc  receive_arbiter.cc  recorders.cc  recv_arbiter.cc  runtime.cc  scheduler.cc  split.cc  sycl_instruction_queue.cc  task.cc  task_manager.cc  thread_queue.h  tracy.cc  tracy.h  utils.cc  worker_job.cc
src/backend/: CMakeLists.txt  backend.cc  cuda_backend.cc  generic_backend.cc  sycl_backend.cc  sycl_cuda_backend.cc  sycl_generic_backend.cc
src/transformers/: naive_split.cc
test/: CMakeLists.txt  accessor_tests.cc  backend_tests.cc  benchmark_reporters.cc  benchmarks.cc  buffer_manager_test_utils.h  buffer_manager_tests.cc  buffer_transfer_manager_tests.cc  copy_test_utils.h  dag_benchmarks.cc  debug_naming_tests.cc  device_selection_tests.cc  distributed_graph_generation_tests.cc  distributed_graph_generator_test_utils.h  executor_tests.cc  graph_compaction_tests.cc  graph_gen_reduction_tests.cc  graph_gen_transfer_tests.cc  graph_generation_tests.cc  grid_test_utils.cc  instruction_graph_memory_tests.cc  instruction_graph_misc_tests.cc  instruction_graph_p2p_tests.cc  instruction_graph_reduction_tests.cc  instruction_graph_test_utils.h  instruction_graph_tests.cc  intrusive_graph_tests.cc  live_executor_tests.cc  log_test_utils.h  moist_run_test.cc  mpi_tests.cc  nd_memory_tests.cc  out_of_order_engine_tests.cc  print_graph_tests.cc  receive_arbiter_tests.cc  recv_arbiter_tests.cc  region_map_tests.cc  runtime_deprecation_tests.cc  runtime_tests.cc  split_tests.cc  (+11 more)
test/debug/: pretty-print-test.py  pretty_printables.cc
test/integration/: backend.cc  run-integration-tests.py
test/system/: CMakeLists.txt  distr_tests.cc  mpi_tests.cc  nbody.cc  nbody_cuda.cu  synthetic_collective_benchmarks.cc  synthetic_collective_benchmarks_cuda.cu
test/system/utils/: wyhash.h
